# advent-of-code-2020

./: README.md
.aocf/: config
1/: task.cxx
10/: task.js
11/: task.js
12/: task.js
14/: task.js
15/: task.js
16/: task.js
17/: task.js
18/: task.js
19/: task.js
20/: task.js
23/: task.js
24/: task.js
5/: task.js
6/: task.js
7/: task.js
8/: task.js
js/02/: task1.cxx
js/03/: task.cxx
js/04/: task.js
js/09/: task.js
js/11/: task.js
js/13/: task.js
js/21/: task.js
js/22/: task.js
js/25/: task.js
rs/day01/: Cargo.toml
rs/day01/src/: main.rs
rs/day02/: Cargo.toml
rs/day02/src/: main.rs
rs/day03/: Cargo.toml
rs/day03/src/: main.rs
rs/day04/: Cargo.toml
rs/day04/src/: main.rs
rs/day05/: Cargo.toml
rs/day05/src/: main.rs
rs/day06/: Cargo.toml
rs/day06/src/: main.rs
rs/day07/: Cargo.toml
rs/day07/src/: main.rs
rs/day08/: Cargo.toml
rs/day08/src/: main.rs
rs/day09/: Cargo.toml
rs/day09/src/: main.rs
rs/day1/src/: main.rs
rs/day10/: Cargo.toml
rs/day10/src/: main.rs
rs/day11/: Cargo.toml
rs/day11/src/: main.rs
rs/day12/: Cargo.toml
rs/day12/src/: main.rs
rust-advent-of-code-2020/: .gitignore  Cargo.toml
rust-advent-of-code-2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
