[package]
name = "rust-advent-of-code-2020"
version = "0.1.0"
authors = ["Mykhailo Pohoda <mykhailo.pohoda@bolt.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner-derive = "^0.3"
aoc-runner = "^0.3"
itertools = "0.9"
regex = "1"
lazy_static = "1"
